<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">天才运算练习</string>
    <string name="action_settings">Settings</string>
     <string name="start_game">进入游戏</string>
     <string name="about">关于信息</string>
     <string name="exit_game">退出游戏</string>
     <string name="select_menu">游戏难度</string>
    <string name="simple">入门</string>
    <string name="general">进阶</string>
    <string name="more_difficult">提升</string>
    <string name="difficult">困难</string>
 	<string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="back">C</string>
    <string name="affirm">确认</string>
    <string name="point">·</string>
    <string name="minus">-</string>
    <string name="diagonal">/</string>
     <string name="home_tv">我的题库</string>
      <string name="style_tv">往次记录</string>
       <string name="shopping_tv">如何提高</string>
         <string name="show_tv">改进</string>
</resources>
