<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="147dp"
        android:background="@drawable/bk0"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/count_text1"
                android:layout_width="match_parent"
                android:layout_height="73dp"
                android:gravity="center_vertical"
                android:textSize="33sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <TextView
                android:id="@+id/count_text2"
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:layout_gravity="right|center_vertical"
                android:textSize="40sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="78dp" >

        <Button
            android:id="@+id/b1"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
             android:layout_marginLeft="3dp"
            android:background="@drawable/s1"
            android:text="@string/one"
            android:textSize="40sp" />

        <Button
            android:id="@+id/b2"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
             android:layout_marginLeft="5dp"
            android:background="@drawable/s2"
            android:text="@string/two"
            android:textSize="40sp" />

        <Button
            android:id="@+id/b3"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
             android:layout_marginLeft="5dp"
              android:layout_marginRight="2dp"
            android:background="@drawable/s3"
            android:text="@string/three"
            android:textSize="40sp" />

        <Button
            android:id="@+id/b10"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="5dp"
            android:layout_weight="1.0"
            android:background="@drawable/sc"
            android:text="@string/back"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="79dp" >

        <Button
            android:id="@+id/b4"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/s4"
            android:text="@string/four"
            android:textSize="40sp" />

        <Button
            android:id="@+id/b5"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/s5"
            android:text="@string/five"
            android:textSize="40sp" />

        <Button
            android:id="@+id/b6"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/s6"
            android:text="@string/six"
            android:textSize="40sp" />

        <Button
            android:id="@+id/b11"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/sp"
            android:text="@string/point"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="78dp" >

        <Button
            android:id="@+id/b7"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/s7"
            android:text="@string/seven"
            android:textSize="40sp" />

        <Button
            android:id="@+id/b8"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/s8"
            android:text="@string/eight"
            android:textSize="40sp" />

        <Button
            android:id="@+id/b9"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/s9"
            android:text="@string/nine"
            android:textSize="40sp" />

        <Button
            android:id="@+id/b12"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/sp"
            android:text="@string/minus"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/b13"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/sp"
            android:text="@string/diagonal"
            android:textSize="40sp" />

        <Button
            android:id="@+id/b0"
              android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/s0"
            android:text="@string/zero"
            android:textSize="40sp" />

        <Button
            android:id="@+id/b15"
             android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:background="@drawable/sf"
            android:text="@string/affirm"
            android:textSize="40sp" />
    </LinearLayout>

</LinearLayout>