<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b2"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="50dp" >

        <Button
            android:id="@+id/easy"
            android:layout_width="200dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="60dp"
            android:background="@drawable/y1"
            android:text="@string/simple"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/advance"
            android:layout_width="200dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="60dp"
            android:background="@drawable/y1"
            android:text="@string/general"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/raise1"
            android:layout_width="200dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="60dp"
            android:background="@drawable/y1"
            android:text="@string/more_difficult"
            android:textSize="40sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/different"
            android:layout_width="200dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="60dp"
            android:background="@drawable/y1"
            android:text="@string/difficult"
            android:textSize="40sp" />

    </LinearLayout>

</LinearLayout>