<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/bottom_bg" >

        <LinearLayout
            android:id="@+id/bottom_home_layout_ly"
            android:layout_width="64dip"
            android:layout_height="match_parent"
            android:layout_marginTop="4dip"
            android:layout_weight="1"
            android:background="@drawable/home_bottom_style"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/home_bottom_home_bn"
                android:layout_width="28dip"
                android:layout_height="28dip"
                android:layout_gravity="center"
                android:background="@drawable/bottom_home_bn_style" />

            <TextView
                android:id="@+id/home_bottom_home_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:paddingTop="2dip"
                android:text="@string/home_tv"
                android:textColor="@android:color/white"
                android:textSize="10dip"
                android:textStyle="bold" />
        </LinearLayout>

        1

        <LinearLayout
            android:id="@+id/bottom_cam_layout_ly"
            android:layout_width="64dip"
            android:layout_height="match_parent"
            android:layout_marginTop="4dip"
            android:layout_weight="1"
            android:background="@drawable/home_bottom_style"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/home_bottom_cam_bn"
                android:layout_width="43dip"
                android:layout_height="33dip"
                android:layout_gravity="center"
                android:layout_marginTop="5dip"
                android:background="@drawable/bottom_cam_bn_style" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_shopping_layout_ly"
            android:layout_width="64dip"
            android:layout_height="match_parent"
            android:layout_marginTop="4dip"
            android:layout_weight="1"
            android:background="@drawable/home_bottom_style"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/home_bottom_shopping_bn"
                android:layout_width="28dip"
                android:layout_height="30dip"
                android:layout_gravity="center"
                android:background="@drawable/bottom_shopping_bn_style" />

            <TextView
                android:id="@+id/home_bottom_shopping_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                android:paddingTop="2dip"
                android:text="@string/shopping_tv"
                android:textColor="@android:color/white"
                android:textSize="10dip"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/bottom_show_layout_ly"
            android:layout_width="64dip"
            android:layout_height="match_parent"
            android:layout_marginTop="4dip"
            android:layout_weight="1"
            android:background="@drawable/home_bottom_style"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/home_bottom_show_bn"
                android:layout_width="28dip"
                android:layout_height="30dip"
                android:layout_gravity="center"
                android:background="@drawable/bottom_show_bn_style" />

            <TextView
                android:id="@+id/home_bottom_show_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingTop="2dip"
                android:text="@string/show_tv"
                android:textColor="@android:color/white"
                android:textSize="10dip"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/RelativeLayout1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="0dp"
        android:background="@drawable/g122"
        android:orientation="vertical" >

        <Button
            android:id="@+id/start_app"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/y1"
            android:paddingLeft="50dp"
            android:text="@string/start_game"
            android:textSize="28sp" />

        <Button
            android:id="@+id/about_game"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/start_app"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/y1"
            android:paddingLeft="50dp"
            android:text="@string/about"
            android:textSize="28sp" />

        <Button
            android:id="@+id/exit_app"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/about_game"
            android:layout_marginLeft="60dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/y1"
            android:paddingLeft="50dp"
            android:text="@string/exit_game"
            android:textSize="28sp" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@+id/about_game"
            android:layout_alignLeft="@+id/about_game"
            android:layout_alignRight="@+id/imageView1"
            android:layout_alignTop="@+id/about_game"
            android:src="@drawable/g10" />

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignLeft="@+id/start_app"
            android:layout_alignTop="@+id/start_app"
            android:paddingLeft="5dp"
            android:src="@drawable/g0" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@+id/exit_app"
            android:layout_alignLeft="@+id/exit_app"
            android:layout_alignRight="@+id/imageView2"
            android:layout_alignTop="@+id/exit_app"
            android:src="@drawable/s20" />

    </RelativeLayout>

</LinearLayout>